# ghostwriter

./: .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml
ghostwriter/: cli.py  utils.py
ghostwriter/commands/: generate.py  train.py
ghostwriter/data/: dataset.py
ghostwriter/data/drake/: prepare.py
ghostwriter/models/gpt/: attention.py  block.py  configs.py  generator.py  mlp.py  model.py  trainer.py
scripts/: clean_artifacts.sh  clean_caches.sh
src/ghostwriter/: cli.py
src/ghostwriter/commands/: generate_dataset.py
src/ghostwriter/dataset/: common.py  scrape_lyrics.py
src/ghostwriter/model/: common.py  generate_lyrics.py  train.py
