[tool.poetry]
name = "ghostwriter"
version = "0.1.0"
description = ""
authors = ["Nick Wall <46641379+walln@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
transformers = "^4.25.1"
tqdm = "^4.64.1"
torch = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
