[tool.poetry]
name = "ghostwriter"
version = "0.1.0"
description = ""
authors = ["Nick Wall <46641379+walln@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
transformers = "^4.25.1"
tqdm = "^4.64.1"
torch = "1.13.1"
lyricsgenius = "^3.0.1"
tiktoken = "^0.1.2"
wandb = "^0.13.9"
black = "^22.12.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
